Fixed word wrapping in poetry

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,10 +179,10 @@ pre.poem {
   font-size: 15px;
   font-weight:300;
   color: #333;
-  white-space: pre;
   white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
+  word-break: keep-all;
+  word-wrap: normal;
+  word-break: normal;
   display: block;
   line-height:1.5;
   padding: 10px 0px 0px 0px;
